--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 node_modules
 dist
-babel.config.js
-package-lock.json
-package.json
-webpack.config.js
+babel.config
+package-lock
+package
+webpack.config
